--- a/assets/style.css
+++ b/assets/style.css
@@ -3,6 +3,12 @@ body {
     font-size: 16px;
     line-height: 1;
   }
+
+  #line{
+    border-left: 100px black;
+    height:100px;
+    color:black;
+  }
   
   textarea{
     background: transparent;
@@ -74,3 +80,10 @@ body {
     border-left:6px black;
     height: 1px;
   }
+
+  .list-group-item{
+    color:black;
+    font-weight: bold;
+  }
+
+  
